recursion.lessons.recursion.spiral.SpiralUse.scala.error
SpiralUse:3: error: type mismatch;
 found   : Double(0.1)
 required: Int
    spiral(10000,5,1,0.1);
                     ^